force-app/main/default/objects/Lead/fields/Air_Compressor_Type__c.field-meta.xml
<CustomField>
    <fullName>Air_Compressor_Type__c</fullName>
    <label>Air Compressor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reciprocating</fullName>
            </value>
            <value>
                <fullName>Oil-Flooded</fullName>
            </value>
            <value>
                <fullName>Oil-Free</fullName>
            </value>
            <value>
                <fullName>Centrifugal</fullName>
            </value>
            <value>
                <fullName>Pet Compressed</fullName>
            </value>
            <value>
                <fullName>Process Gas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>