force-app/main/default/objects/Lead/fields/Cybersecurity_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Cybersecurity_Focus_Area__c</fullName>
    <label>Cybersecurity Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Protect People</fullName>
            </value>
            <value>
                <fullName>Defend Data</fullName>
            </value>
            <value>
                <fullName>Mitigate Human Risk</fullName>
            </value>
            <value>
                <fullName>Augment Your Capabilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>