force-app/main/default/objects/Lead/fields/Dreamforce_25_Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Dreamforce_25_Product_Interest__c</fullName>
    <label>Dreamforce 25 Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Cloud</fullName>
            </value>
            <value>
                <fullName>Agentforce</fullName>
            </value>
            <value>
                <fullName>Copado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>