force-app/main/default/objects/Lead/fields/Golf_Solution_Areas_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Golf_Solution_Areas_of_Interest__c</fullName>
    <label>Golf Solution Areas of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Golf Now</fullName>
            </value>
            <value>
                <fullName>Tee Off</fullName>
            </value>
            <value>
                <fullName>Golf Pass</fullName>
            </value>
            <value>
                <fullName>Military Tee Times</fullName>
            </value>
            <value>
                <fullName>Club Buy</fullName>
            </value>
            <value>
                <fullName>Golf 365</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>