force-app/main/default/objects/Lead/fields/Hot_Lead__c.field-meta.xml
<CustomField>
    <fullName>Hot_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hot Lead</label>
    <type>Checkbox</type>
</CustomField>