force-app/main/default/objects/Lead/fields/Industry_Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Solution_Type__c</fullName>
    <label>Industry &amp; Solution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Aviation</fullName>
            </value>
            <value>
                <fullName>Marine &amp; Offshore</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Refined Fuels</fullName>
            </value>
            <value>
                <fullName>Sports &amp; Safety</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Utilities &amp; Renewable Energy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>