force-app/main/default/objects/Lead/fields/Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type__c</fullName>
    <label>Industry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Banking &amp; Financial Services</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Retail &amp; CPG</fullName>
            </value>
            <value>
                <fullName>Telecom, Media &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Travel &amp; Hospitality</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>