force-app/main/default/objects/Lead/fields/Investment_Interest__c.field-meta.xml
<CustomField>
    <fullName>Investment_Interest__c</fullName>
    <label>Investment Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stocks</fullName>
            </value>
            <value>
                <fullName>Bonds</fullName>
            </value>
            <value>
                <fullName>Mutual Funds</fullName>
            </value>
            <value>
                <fullName>ETFs</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Cryptocurrency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>