force-app/main/default/objects/Lead/fields/Investment_Planning_Interest__c.field-meta.xml
<CustomField>
    <fullName>Investment_Planning_Interest__c</fullName>
    <label>Investment Planning Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wealth Plan</fullName>
            </value>
            <value>
                <fullName>Plan for Retirement</fullName>
            </value>
            <value>
                <fullName>Pay for College</fullName>
            </value>
            <value>
                <fullName>Plan with a Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>