force-app/main/default/objects/Lead/fields/Lead_Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Lead_Product_Interest__c</fullName>
    <label>Lead Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ceilings</fullName>
            </value>
            <value>
                <fullName>Walls</fullName>
            </value>
            <value>
                <fullName>Floors &amp; Tile</fullName>
            </value>
            <value>
                <fullName>Roofing &amp; Building Envelope</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Design Studio &amp; Tools</fullName>
            </value>
            <value>
                <fullName>Performance &amp; Applications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>