force-app/main/default/objects/Lead/fields/LOB_Tracking__c.field-meta.xml
<CustomField>
    <fullName>LOB_Tracking__c</fullName>
    <label>LOB Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal banking</fullName>
            </value>
            <value>
                <fullName>Private wealth</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>