force-app/main/default/objects/Lead/fields/Market_Focus_Area__c.field-meta.xml
<CustomField>
    <fullName>Market_Focus_Area__c</fullName>
    <label>Market Focus Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hospitals and Health Systems</fullName>
            </value>
            <value>
                <fullName>Ambulatory and Physician Practices</fullName>
            </value>
            <value>
                <fullName>Payers</fullName>
            </value>
            <value>
                <fullName>Partners and Resellers</fullName>
            </value>
            <value>
                <fullName>Life Sciences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>