force-app/main/default/objects/Lead/fields/NYWT_Lead__c.field-meta.xml
<CustomField>
    <fullName>NYWT_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NYWT Lead?</label>
    <type>Checkbox</type>
</CustomField>