force-app/main/default/objects/Lead/fields/Service_Thank_You_Due_By__c.field-meta.xml
<CustomField>
    <fullName>Service_Thank_You_Due_By__c</fullName>
    <label>Service Thank You Due By</label>
    <type>Date</type>
</CustomField>