force-app/main/default/objects/Lead/fields/Solution_Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Solution_Area_of_Interest__c</fullName>
    <label>Solution Area of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Embrace Generative AI</fullName>
            </value>
            <value>
                <fullName>Understand My Potential ROI</fullName>
            </value>
            <value>
                <fullName>Move to an Open CCaaS Platform</fullName>
            </value>
            <value>
                <fullName>Improve My Service Quality</fullName>
            </value>
            <value>
                <fullName>Access AI Innovations Now</fullName>
            </value>
            <value>
                <fullName>Increase CX Automation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>