force-app/main/default/objects/Lead/fields/Vendor_Interest_Area__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Interest_Area__c</fullName>
    <label>Vendor Interest Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Home, Beauty &amp; Baby</fullName>
            </value>
            <value>
                <fullName>Joe Fresh</fullName>
            </value>
            <value>
                <fullName>New &amp; Seasonal</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>