force-app/main/default/objects/Lead/fields/Wealth_Classification__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Classification__c</fullName>
    <label>Wealth Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 1M</fullName>
            </value>
            <value>
                <fullName>1M - 5M</fullName>
            </value>
            <value>
                <fullName>5M and Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>