force-app/main/default/objects/Lead/fields/What_s_On_Interest__c.field-meta.xml
<CustomField>
    <fullName>What_s_On_Interest__c</fullName>
    <label>What&apos;s On Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Browse Content</fullName>
            </value>
            <value>
                <fullName>Channel Guide</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Howard Stern</fullName>
            </value>
            <value>
                <fullName>News &amp; Issues</fullName>
            </value>
            <value>
                <fullName>Talk &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Comedy</fullName>
            </value>
            <value>
                <fullName>Podcasts</fullName>
            </value>
            <value>
                <fullName>Hear &amp; Now Blog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>